force-app/main/default/objects/Visit_Result_TypeM__mdt/fields/Description_Label_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Description_Label_Api_Name__c</fullName>
    <description>Label Api Name</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>