force-app/main/default/objects/Visit_Result_TypeM__mdt/fields/Visit_Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Visit_Result_Code__c</fullName>
    <label>Visit Result Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>