force-app/main/default/objects/Visit_Result_TypeM__mdt/fields/Visit_Result_Label__c.field-meta.xml
<CustomField>
    <fullName>Visit_Result_Label__c</fullName>
    <label>Visit Result Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>