force-app/main/default/objects/Visit_Result_TypeM__mdt/fields/Visit_Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Result_Type__c</fullName>
    <label>Visit Result Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lab</fullName>
                <default>true</default>
                <label>Lab</label>
            </value>
            <value>
                <fullName>Vital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>